# pymicrostructure

./: .coverage  .gitignore  .readthedocs.yaml  LICENSE.md  README.md  coverage.xml  cspell.json  outline.md  playground.ipynb  pyproject.toml  requirements.txt  setup.py  todo.md
docs/: changelog.md  conf.py  contributing.md  faq.md  getting_started.md  index.rst  microstructpy.markets.rst  microstructpy.metrics.rst  microstructpy.orders.rst  microstructpy.rst  pymicrostructure.orders.rst  pymicrostructure.rst  pymicrostructure.traders.rst  requirements.txt  user_guide.md
docs/_build/: .buildinfo  changelog.html  contributing.html  faq.html  genindex.html  getting_started.html  index.html  objects.inv  pymicrostructure.markets.html  pymicrostructure.metrics.html  pymicrostructure.orders.html  pymicrostructure.traders.html  searchindex.js  user_guide.html
examples/: Example1.ipynb  Example2.ipynb  Example3.ipynb  SimpleSimulation.ipynb  market.pkl
microstructpy/: market.py  order.py  trader.py  viz.py
microstructpy/markets/: base.py  continous.py
microstructpy/metrics/: market.py  trader_metrics.py
microstructpy/orders/: base.py  limit.py  market.py
microstructpy/traders/: base.py  informed.py  market_maker.py  noise.py
microstructpy/visualization/: __init__.py  summary.py
performance/: Performance.ipynb  program.prof  program_jit.prof
src/: market.pkl  playground.ipynb  playground.py  todo.md
src/docs/: conf.py  index.rst  microstructpy.orders.rst  microstructpy.rst  microstructpy.visualization.rst  modules.rst
src/microstructpy/: __init__.py
src/microstructpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pymicrostructure.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_informed.py  test_marketmaker.py  test_noisetrader.py  test_strategy.py
(+190 files in other folders)
