# pyproject.toml


[project]
name = "pymicrostructure"
version = "0.0.2"
description = "Simulate financial markets"
readme = "README.md"
authors = [{ name = "Bartosz Bieganowski", email = "bartosz.bieganowski.office@gmail.com" }]
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["finance", "quant", "trading"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.0.0",
    "dill>=0.3.4",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "seaborn>=0.11.2",
    'tomli; python_version >= "3.11"',
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/BBieganowski/pymicrostructure"